@@ -6,7 +6,7 @@ Copyright (C) 2010-2011  Hector Martin "marcan" <hector@marcansoft.com>
 This code is licensed to you under the terms of the GNU GPL, version 2;
 see file COPYING or http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt
 *************************************************************************
- NORway.c (v0.5 beta) - Teensy++ 2.0 port by judges@eEcho.com
+ NORway.c (v0.5 final) - Teensy++ 2.0 port by judges@eEcho.com
 *************************************************************************/
 
 #include <avr/io.h>
