@@ -72,3 +72,4 @@ v0.5
 + Added additional verification when writing is done. Although each write command
   verifies each written sector/block, it happened that written bytes weren't
   persistent
++ Added "verify" command
